--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <img src="file:///C:/Users/doneg/Downloads/Project%20Photo.webp" width="1000" height="500" class="img-responsive" alt="...">
                 <div class="carousel-caption">
                   <h3 class="h5">Clothes</h3>
-                  <p>Supreme x Hype</p>
+                  <p>Supreme - Hype</p>
                 </div>
               </div>
 
